Messaging without proxies

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <P>Here is a collection of various Minecraft-related tutorials.</P>
 <ol>
   <li><a href="pages/server-on-headless-ubuntu.html">Setting up a server on a headless Ubuntu server.</a></li>
+  <li><a href="pages/networking-without-proxies.html">Networking without proxies (1.15)</a></li>
 </ol>
 
 <H4>Licensed under Apache 2.0</H4>
