--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <ol>
   <li><a href="pages/server-on-headless-ubuntu.html">Setting up a server on a headless Ubuntu server.</a></li>
   <li><a href="pages/networking-without-proxies.html">Networking without proxies (1.15)</a></li>
+  <li><a href="pages/containerless-screens.html">Opening screens without containers</a></li>
 </ol>
 
 <H4>Licensed under Apache 2.0</H4>
